--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "contributors": [
     "Dane Springmeyer <dane@dbsgeo.com>"
   ],
+  "repository"   :  {
+           "type" : "git",
+           "url"  : "git://github.com/springmeyer/arc.js.git"
+  },
   "version": "0.0.2",
   "licenses": [{
     "type": "BSD"
