--- a/package.json
+++ b/package.json
@@ -3,30 +3,29 @@
   "description": "draw great circle arcs",
   "url": "https://github.com/springmeyer/arc.js",
   "keywords": [
-    "maps",
-    "spherical",
-    "globe",
-    "rhumb line",
-    "crow flies",
-    "great circle"
+      "maps",
+      "spherical",
+      "globe",
+      "rhumb line",
+      "crow flies",
+      "great circle"
   ],
   "contributors": [
-    "Dane Springmeyer <dane@dbsgeo.com>"
+      "Dane Springmeyer <dane@dbsgeo.com>"
   ],
   "repository"   :  {
-           "type" : "git",
-           "url"  : "git://github.com/springmeyer/arc.js.git"
+      "type" : "git",
+      "url"  : "git://github.com/springmeyer/arc.js.git"
   },
   "version": "0.0.2",
   "licenses": [{
-    "type": "BSD"
+      "type": "BSD"
   }],
   "main": "./index",
   "engines": {
-    "node": ">=0.4.0"
+      "node": ">=0.4.0"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
+  "scripts"       : {
+      "test"    : "mocha -R spec"
   }
 }
