--- a/package.json
+++ b/package.json
@@ -4,28 +4,33 @@
   "description": "draw great circle arcs",
   "url": "https://github.com/springmeyer/arc.js",
   "keywords": [
-      "maps",
-      "spherical",
-      "globe",
-      "rhumb line",
-      "crow flies",
-      "great circle"
+    "maps",
+    "spherical",
+    "globe",
+    "rhumb line",
+    "crow flies",
+    "great circle"
   ],
   "contributors": [
-      "Dane Springmeyer <dane@dbsgeo.com>"
+    "Dane Springmeyer <dane@dbsgeo.com>"
   ],
-  "repository"   :  {
-      "type" : "git",
-      "url"  : "git://github.com/springmeyer/arc.js.git"
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/springmeyer/arc.js.git"
   },
-  "licenses": [{
+  "licenses": [
+    {
       "type": "BSD"
-  }],
+    }
+  ],
   "main": "./index",
   "engines": {
-      "node": ">=0.4.0"
+    "node": ">=0.4.0"
   },
-  "scripts"       : {
-      "test"    : "mocha -R spec"
+  "scripts": {
+    "test": "mocha -R spec"
+  },
+  "devDependencies": {
+    "mocha": "~1.17.1"
   }
 }
