--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "node": ">=0.4.0"
   },
   "scripts": {
-    "test": "tape test/*.js"
+    "test": "grunt tape"
   },
   "devDependencies": {
-    "tape": "~2.12.1"
+    "tape": "~2.12.1",
+    "grunt": "~0.4.4",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-tape": "0.0.2"
   },
   "testling": {
     "files": "test/*.js",
