refactor: remove -class suffix from all files and modernize testing
• Remove -class suffix from source files (arc-class.ts → arc.ts, etc.)
• Convert all tests to TypeScript with Jest + expect-type for type safety
• Simplify test scripts and remove tape dependency for cleaner setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "outDir": "./dist",
-    "rootDir": "./src",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -17,7 +16,11 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowImportingTsExtensions": false,
-    "noEmit": false
+    "noEmit": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": [
     "src/**/*"
@@ -25,7 +28,6 @@
   "exclude": [
     "node_modules",
     "dist",
-    "test",
     "example"
   ]
 }
