--- a/package.json
+++ b/package.json
@@ -41,15 +41,21 @@
     "build": "npm run clean && tsc && tsc -p tsconfig.esm.json && npm run build:browser",
     "build:browser": "esbuild src/index.ts --bundle --format=cjs --outfile=arc.js --platform=node",
     "clean": "rm -rf dist/ && rm -f arc.js",
-    "test": "for file in test/*.test.js; do echo \"Running $file...\"; node \"$file\" || exit 1; done",
+    "test": "jest",
+    "test:all": "npm run test && npm run test:build",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:build": "node test/build-output.test.js",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.16",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
-    "@types/tape": "^5.8.1",
     "esbuild": "^0.25.9",
-    "tape": "~5.5.3",
+    "expect-type": "^1.2.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.3",
     "typescript": "^5.0.0"
   }
 }
