--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typescript"
   ],
   "contributors": [
-    "Dane Springmeyer <dane@dbsgeo.com>"
+    "Dane Springmeyer <dane.springmeyer@gmail.com>"
   ],
   "repository": {
     "type": "git",
