Fixed incorrect build:browser script
- Updated to build for browser, not node

- Simplified imports

- Updated and build-output.test.js

- Removed redundant Jest config

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "build": "npm run clean && tsc && tsc -p tsconfig.esm.json && npm run build:browser",
-    "build:browser": "esbuild src/index.ts --bundle --format=cjs --outfile=arc.js --platform=node",
+    "build:browser": "esbuild src/index.ts --bundle --format=iife --global-name=arc --outfile=arc.js --platform=browser",
     "clean": "rm -rf dist/ && rm -f arc.js",
     "test": "jest",
     "test:all": "npm run test && npm run test:build",
